--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -16,10 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MY PLAYLIST"
-            app:layout_constraintBottom_toTopOf="@id/textview_first"
+            app:layout_constraintTop_toBottomOf="@id/search_bar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <!-- Search Bar -->
         <androidx.appcompat.widget.SearchView
@@ -39,9 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Welcome and be your own DJ"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/button_first"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_first" />
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
