--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -68,9 +68,15 @@
             android:text="No file selected"
             android:textSize="16sp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/textview_first"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+            android:padding="12dp"
+        android:background="@drawable/border"
+        android:textColor="#333333"
+        app:layout_constraintTop_toBottomOf="@id/textview_first"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
